# football-data-collector

./: .gitignore  PROJECT_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a1d7b9f45c3_add_rbac_foundations.py  6f9cf62e2f3a_add_clubs_and_split_team_names.py  8cb8a0ea2ba6_initial_schema.py  9587a26b990e_add_team_memberships.py  a7e8f9d0c1b2_add_match_period_fields.py  a9b8c7d6e5f4_add_collection_sessions_table.py  b2f6c9d8e1a7_add_club_logo_filename.py  b7c6d5e4f3a2_repair_collection_sessions_schema.py  b8c9d0e1f2a3_snapshot_branch_bridge.py  c1d2e3f4a5b6_add_match_prep_plan_tables.py  c3d4e5f6a7b8_expand_goal_mouth_coordinate_range.py  c4f1e9d2ab77_drop_legacy_user_ownership_columns.py  c7d1e2f3a4b5_add_coaching_notes_table.py  d4e5f6a7b8c9_add_lineup_slot_to_match_plan_players.py  d9f8e7c6b5a4_align_goal_mouth_to_opta_scale.py  e1a2b3c4d5e6_rename_team_admin_role_to_manager.py  e2b3c4d5e6f7_add_assister_player_id_to_events.py  e6f7a8b9c0d1_add_match_plan_substitution_tables.py  f1b2c3d4e5f6_add_match_format_column.py  f2a3b4c5d6e7_add_explicit_event_fields.py
backend/app/: main.py
backend/docs/: permissions_matrix.md
backend/scripts/: create_super_admin.py  run_tests_local.ps1  setup_local_db.ps1
backend/tests/: test_admin_roles.py  test_auth_session.py  test_authorization_matrix.py  test_match_prep.py  test_matches.py  test_security.py  test_teams_players.py
frontend/: Dockerfile  (+7 more)
(+76 files in other folders)
