[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Football Data Collector"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.1",
    "fastapi>=0.135.1",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[project.scripts]
start = "main:main"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["I001"]
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
